--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native-stack": "^6.2.5",
     "axios": "^0.24.0",
     "json-server": "^0.17.0",
+    "native-base": "^3.2.2",
     "react": "17.0.2",
     "react-native": "0.66.3",
     "react-native-safe-area-context": "^3.3.2",
