--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "native-base": "^3.2.2",
     "react": "17.0.2",
     "react-native": "0.66.3",
+    "react-native-encrypted-storage": "^4.0.2",
     "react-native-paper": "^4.10.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
