--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -152,6 +152,13 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+
+        release {
+            storeFile file('your_key_name.keystore')
+            storePassword 'password'
+            keyAlias 'your_key_alias'
+            keyPassword 'password'
+        }
     }
     buildTypes {
         debug {
@@ -165,6 +172,7 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
+            signingConfig signingConfigs.release
             signingConfig signingConfigs.debug
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
